updated to be more similar to wibi's setup