@@ -117,7 +117,7 @@
         <nosqlunit-mongodb.version>0.7.7</nosqlunit-mongodb.version>
         <org.springframework.version>3.1.0.RELEASE</org.springframework.version>
         <scala-library.version>2.10.3</scala-library.version>
-        <scala-maven-plugin.version>3.1.6</scala-maven-plugin.version>
+        <!-- <scala-maven-plugin.version>3.1.6</scala-maven-plugin.version> -->
         <scala.version>2.10</scala.version>
         <scala.full.version>2.10.2</scala.full.version>
         <scala.scalding.version>2.10</scala.scalding.version>
@@ -144,6 +144,18 @@
         <maven.compiler.target>1.6</maven.compiler.target>
         <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
 
+      <!-- Hadoop/HBase dependencies -->
+      <cdh.version>cdh5.1.3</cdh.version>
+
+      <hadoop-mr1.version>2.3.0-mr1-${cdh.version}</hadoop-mr1.version>
+      <hadoop.version>2.3.0-${cdh.version}</hadoop.version>
+      <hbase.version>0.98.1-${cdh.version}</hbase.version>
+
+<!--      <maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>-->
+      <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
+
+      <scala-maven-plugin.version>3.2.0</scala-maven-plugin.version>
+      <scalastyle-plugin.version>0.3.2</scalastyle-plugin.version>
     </properties>
 
     <dependencies>
@@ -174,19 +186,15 @@
         </dependency>
 
         <!-- Hadoop -->
-        <!--
-           Use 2.0.0-mr1-cdh4.x.x for MRv1 APIs
-           Use 2.0.0-cdh4.0.0 for YARN APIs
-        -->
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
-            <version>2.0.0-mr1-cdh4.6.0</version> <!-- 0.20.2-->
+            <version>${hadoop-mr1.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
-            <version>2.0.0-cdh4.6.0</version>
+            <version>${hadoop.version}</version>
         </dependency>
 
         <!-- Testing -->
@@ -207,7 +215,23 @@
             <artifactId>specs2_2.10</artifactId>
             <version>${specs2.version}</version>
             <scope>test</scope>
+            <exclusions>
+              <exclusion>
+                <groupId>org.scala-lang</groupId>
+                <artifactId>scala-library</artifactId>
+                </exclusion>
+              <exclusion>
+                <groupId>com.chuusai</groupId>
+                <artifactId>shapeless_2.10.2</artifactId>
+              </exclusion>
+            </exclusions>
         </dependency>
+      <dependency>
+        <groupId>com.chuusai</groupId>
+        <artifactId>shapeless_2.10.3</artifactId>
+        <version>2.0.0</version>
+        <scope>test</scope>
+      </dependency>
 
         <!-- For Scalding 0.10.0 -->
         <dependency>
@@ -237,22 +261,22 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.1.6</version>
                 <executions>
-                    <execution>
-                        <id>compile-scala</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>compile-tests-scala</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
+                  <execution>
+                    <id>scala-compile-first</id>
+                    <phase>process-resources</phase>
+                    <goals>
+                      <goal>add-source</goal>
+                      <goal>compile</goal>
+                    </goals>
+                  </execution>
+                  <execution>
+                    <id>scala-test-compile</id>
+                    <phase>process-test-resources</phase>
+                    <goals>
+                      <goal>testCompile</goal>
+                    </goals>
+                  </execution>
                 </executions>
                 <!-- Advanced options if Zinc server is in use
                 <configuration>
@@ -262,18 +286,24 @@
             </plugin>
 
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>${maven-compiler-plugin.version}</version>
+              <executions>
+                <execution>
+                  <phase>compile</phase>
+                  <goals>
+                    <goal>compile</goal>
+                  </goals>
+                </execution>
+              </executions>
             </plugin>
 
             <!-- Define in the include patterns of Unit and Job test cases -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.16</version>
+                <version>${maven-surefire-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>surefire-test</id>
@@ -284,7 +314,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <disableXmlReport>true</disableXmlReport>
+                  <argLine>-Xmx2G -XX:MaxPermSize=512m</argLine>
+                  <disableXmlReport>true</disableXmlReport>
                     <includes>
                         <include>**/*Test*</include>
                         <include>**/*Spec*</include>
@@ -295,6 +326,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -380,45 +412,107 @@
                 </executions>
             </plugin>
 
+          <!--
+          <plugin>
+            <groupId>org.scalastyle</groupId>
+            <artifactId>scalastyle-maven-plugin</artifactId>
+            <configuration>
+              <failOnViolation>true</failOnViolation>
+              <includeTestSourceDirectory>true</includeTestSourceDirectory>
+              <failOnWarning>false</failOnWarning>
+              <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
+              <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
+              <configLocation>${basedir}/src/main/scalastyle/scalastyle_config.xml</configLocation>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          -->
         </plugins>
 
 
         <pluginManagement>
         	<plugins>
-        		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-        		<plugin>
-        			<groupId>org.eclipse.m2e</groupId>
-        			<artifactId>lifecycle-mapping</artifactId>
-        			<version>1.0.0</version>
-        			<configuration>
-        				<lifecycleMappingMetadata>
-        					<pluginExecutions>
-        						<pluginExecution>
-        							<pluginExecutionFilter>
-        								<groupId>
-        									org.apache.maven.plugins
-        								</groupId>
-        								<artifactId>
-        									maven-dependency-plugin
-        								</artifactId>
-        								<versionRange>
-        									[2.1,)
-        								</versionRange>
-        								<goals>
-        									<goal>
-        										copy-dependencies
-        									</goal>
-        								</goals>
-        							</pluginExecutionFilter>
-        							<action>
-        								<ignore></ignore>
-        							</action>
-        						</pluginExecution>
-        					</pluginExecutions>
-        				</lifecycleMappingMetadata>
-        			</configuration>
-        		</plugin>
-        	</plugins>
+            <plugin>
+              <groupId>net.alchim31.maven</groupId>
+              <artifactId>scala-maven-plugin</artifactId>
+              <version>${scala-maven-plugin.version}</version>
+              <executions>
+                <execution>
+                  <id>compilation</id>
+                  <goals>
+                    <goal>compile</goal>
+                    <goal>testCompile</goal>
+                  </goals>
+                  <configuration>
+                    <args>
+                      <arg>-unchecked</arg>
+                      <arg>-deprecation</arg>
+                    </args>
+                    <sendJavaToScalac>true</sendJavaToScalac>
+                    <jvmArgs>
+                      <!-- Fixes the build on OS X based computers. -->
+                      <jvmArg>-Xmx2G</jvmArg>
+                    </jvmArgs>
+                    <!-- Fixes warnings from multiple scala version checks against scala 2.10. -->
+                    <scalaCompatVersion>2.10</scalaCompatVersion>
+                  </configuration>
+                </execution>
+                <execution>
+                  <id>scaladocs</id>
+                  <phase>prepare-package</phase>
+                  <goals>
+                    <goal>doc</goal>
+                  </goals>
+                  <configuration>
+                    <outputDirectory>${project.build.directory}/apidocs</outputDirectory>
+                    <reportOutputDirectory>${project.build.directory}/apidocs</reportOutputDirectory>
+                    <jvmArgs>
+                      <!-- Fixes the build on OS X based computers. -->
+                      <jvmArg>-Xmx2G</jvmArg>
+                    </jvmArgs>
+                  </configuration>
+                </execution>
+              </executions>
+              <configuration>
+                <scalaVersion>${scala-library.version}</scalaVersion>
+              </configuration>
+            </plugin>
+
+<!--            <plugin>
+-->
+              <!-- If you include this in your config, you must supply a
+                   src/main/scalastyle/scalastyle_config.xml file. -->
+<!--
+              <groupId>org.scalastyle</groupId>
+              <artifactId>scalastyle-maven-plugin</artifactId>
+              <version>${scalastyle-plugin.version}</version>
+              <configuration>
+                <skip>${skipVerify}</skip>
+                <verbose>false</verbose>
+                <failOnViolation>true</failOnViolation>
+                <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                <failOnWarning>false</failOnWarning>
+                <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
+                <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
+                <configLocation>${basedir}/src/main/scalastyle/scalastyle_config.xml</configLocation>
+              </configuration>
+              <executions>
+                <execution>
+                  <goals>
+                    <goal>check</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+-->
+
+          </plugins>
         </pluginManagement>
     </build>
 
